_sass/_base.scss
/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
    margin: 0;
    padding: 0;
}

/**
 * Bottom margin for hr
 */
hr {
    margin-bottom: 25px;
}

/**
 * Basic styling
 */
body {
    font-family: $base-font-family;
    font-size: $base-font-size;
    line-height: $base-line-height;
    font-weight: 300;
    color: $text-color;
    background-color: $background-color;
    -webkit-text-size-adjust: 100%;
}



/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
    margin-bottom: $spacing-unit / 2;
}

/**
 * Images
 */
img {
    max-width: 100%;
    vertical-align: middle;
}



/**
 * Figures
 */
figure > img {
    display: block;
}

figcaption {
    font-size: $small-font-size;
}



/**
 * Lists
 */
ul, ol {
    margin-left: $spacing-unit;
}

li {
    > ul,
    > ol {
         margin-bottom: 0;
    }
}



/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
    font-weight: 400;
}

a {
  font-weight: 400;
  cursor: pointer;
  border-bottom: 2px dotted #888888;
  padding-bottom: 2px;
  text-decoration: none;
  color: #888888;

  &:visited {
    color: #005999;
  }

  &:hover, &:focus {
    border-color: #0049BC;
  color: #0049BC;
  text-decoration: none;
  }

  img {
    &hover, &focus {
        cursor: zoom-in;
    }
  }
}

.no-line {
    border-bottom: none;
}

/**
 * Blockquotes
 */
blockquote {
  background: #fff;
  font-size: 1.2em;
  border-left: .7em solid #000000;
  margin: 1em .5em;
  padding: 1em 1.3em;
  line-height: 1.2em;
  quotes: "\201C""\201D";
  box-shadow: 1px 1px 3px #aaa;
}

blockquote:before {
  color: #000;
  content: open-quote;
  font-size: 4em;
  line-height: 0;
  vertical-align: -.41em;
  padding: 0 .1em 0 .1em;
}

blockquote:after
{
    content: no-close-quote;
}

blockquote:first-child {
  display: absolute;
  padding-top: 1.3em;
}

blockquote:last-child {
  display: absolute;
}

/**
 * Code formatting
 */
pre,
code {
    font-family: "Andale Monaco", "Monaco", "Consolas", monospace;
    font-size: 14px;
    border-radius: 3px;
    background-color: #333;
    padding: 3px 5px;
    color: #fff;
    margin: 0 auto;
}

pre {
    padding: 12px 0;
    overflow-x: auto;
    padding-bottom: 17px;
    display: inline-block;
    text-align: left;

    > code {
        border: 0;
        padding-right: 0;
        padding-left: 0;
    }
}


/**
 * Wrapper
 */
.wrapper {
    max-width: -webkit-calc(800px - (#{$spacing-unit} * 2));
    max-width:         calc(800px - (#{$spacing-unit} * 2));
    margin-right: auto;
    margin-left: auto;
    padding-right: $spacing-unit;
    padding-left: $spacing-unit;
    @extend %clearfix;

    @include media-query($on-laptop) {
        max-width: -webkit-calc(800px - (#{$spacing-unit}));
        max-width:         calc(800px - (#{$spacing-unit}));
        padding-right: $spacing-unit / 2;
        padding-left: $spacing-unit / 2;
    }
}



/**
 * Clearfix
 */
%clearfix {

    &:after {
        content: "";
        display: table;
        clear: both;
    }
}



/**
 * Icons
 */
.icon {

    > svg {
        display: inline-block;
        width: 32px;
        height: 32px;
        vertical-align: middle;

        path {
            fill: white;
        }
        circle {
            fill: white;
        }
    }
}

/**
 * Modification of styling on user part
 */
table {
    display: table;
    border-collapse: collapse;
    padding: 0;
    border-spacing: 2px;
    border-color: grey;
    margin-top: 15px;
    margin-bottom: 15px;
}

table tr {
    border-top: 1px solid grey;
    background-color: white;
    margin: 0;
    padding: 0;
}

table tr th {
    font-weight: bold;
    border: 1px solid grey;
    margin: 0;
    padding: 6px 13px;
}

table tr td {
    border: 1px solid grey;
    margin: 0;
    padding: 6px 13px;;
}

thead {
    display: table-header-group;
    vertical-align: middle;
}

tbody {
    display: table-row-group;
    vertical-align: middle;
}

tr:nth-child(odd) {
    background-color: #ffffff;
}
tr:nth-child(even) {
    background-color: #efefef;
}

.post-tags {
    font-weight: 400;
}

/**
 * Override weui's settings.
 */
.weui-panel {
    margin-top: 0px;
}

.weui-media-box__bd {
    margin-left: 15px;
}

.weui-media-box__info {
    margin-left: 0px;
}

.weui-media-box__thumb {
    border-radius: 7px;
}

.weui-media-box__title {
    white-space: normal;
    word-wrap: normal;
    word-break: normal;
}

/** Main app */
.monthlyreport-head {
    background-color: #333;
}
hr {
    border-bottom-width: 1px;
    border-left-width: 1px;
    border-right-width: 1px;
    border-style: solid;
}

/** increase icon for each of article */
.weui-media-box_appmsg .weui-media-box__hd {
    width: 100px;
    height: 100px;
}

/** override image behavior */
img {
    display: table;
    margin: 0 auto;
    max-height: 600px;
    box-shadow: 0px 0px 4px #ddd;
}
img.normal {
    display: inherit;
    margin: 0;
    box-shadow: none;
}
sub.tagline {
    text-align: center;
    display: table;
    margin: 0 auto;
    font-family: "Monaco", "Consolas", "Andale Monaco", monospace;
    font-size: 12px;
    border-radius: 4px;
    background-color: #fafafa;
    padding: 2px 5px;
    color: #333;
}
sub.margin {
    margin-top: 5px;
    margin-bottom: 40px;
}

div.highlight {
  width: 100vw;
  margin-left: 50%;
  transform: translateX(-50%);
  padding-left: 0px;
  padding-right: 0px;
  background-color: #333;
  text-align: center;
  box-shadow: 0px 0px 4px #eee;
}

